# darwin

./: .gitignore  CMakeLists.txt
april/: .gitignore  AprilTypes.h  CMakeLists.txt  CameraUtil.cpp  CameraUtil.h  DebugImage.cpp  DebugImage.h  Geometry.cpp  Geometry.h  GrayModel.cpp  GrayModel.h  MathUtil.cpp  MathUtil.h  Refine.cpp  Refine.h  TagDetection.h  TagDetector.cpp  TagDetector.h  TagFamilies.cpp  TagFamily.cpp  TagFamily.h  UnionFindSimple.cpp  UnionFindSimple.h  bundler.cpp  calibrate.cpp  camglut.cpp  camtest.cpp  gltest.cpp  maketags.cpp  quadtest.cpp  setup_opencv.cmake  tagtest.cpp  testavalues.py  testimages.py
april/images/darwincam/: view_all.sh
april/mathematica/: homography.nb  hstuff.nb
april/matlab/: codify.m  dump.m  hsimple.m  hsimple.mat
darwin/: CMakeLists.txt  code_search.sh
darwin/Framework/include/: Point.h
darwin/Framework/src/: CM730.cpp
darwin/Framework/src/math/: Point.cpp
darwin/Linux/: CMakeLists.txt
darwin/Linux/lib/: .gitignore
darwin/Linux/openrave/: .#IK_test.py  .gitignore  CMakeLists.txt  ForwardKinematicsDataGeneration.py  test_transforms.py
darwin/Linux/openrave/cpp/: CMakeLists.txt  README
darwin/Linux/openrave/cpp/Jacobians/: CMakeLists.txt  main.cpp
darwin/Linux/openrave/cpp/control_ee/: CMakeLists.txt  DarwinDynamicDefinitions.h  ik_rightleg.cpp  main.cpp
darwin/Linux/openrave/cpp/diff_kin/: CMakeLists.txt  main.cpp
darwin/Linux/openrave/cpp/forwardKin/: CMakeLists.txt  main.cpp
darwin/Linux/openrave/cpp/ik_loader/: ikfastloader.cpp
darwin/Linux/openrave/cpp/ik_wrapper/: CMakeLists.txt
darwin/Linux/openrave/cpp/lib_control_robot/: CMakeLists.txt  DarwinDynamicDefinitions.cpp  DarwinDynamicDefinitions.h  DarwinKinematics.cpp  DarwinKinematics.h  ForwardKinematics.cpp  ForwardKinematics.h  Joystick.cpp  Kinematics.cpp  Kinematics.h  Transform2.h  Transform3.h  cmuk.cpp  cmuk.h  ik_leftleg.cpp  ik_rightleg.cpp  mat2.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
darwin/Linux/openrave/cpp/one_foot/: CMakeLists.txt  main.cpp
darwin/Linux/openrave/cpp/one_foot_diff/: CMakeLists.txt  main.cpp
darwin/Linux/openrave/cpp/playback/: CMakeLists.txt  playback.cpp
darwin/Linux/openrave/cpp/zero_finding/: CMakeLists.txt  main.cpp
darwin/Linux/openrave/python/: .gitignore  ForwardKinematicsDataGeneration.py  IK_fast_generation.py  IK_test.py  README
darwin/Linux/openrave/python/xml/: README  romela-darwin-op-no-joint-limits.dae  romela-darwin-op.dae
darwin/Linux/project/: CMakeLists.txt
darwin/Linux/project/action_editor/: .gitignore
darwin/Linux/project/april_tags/: .gitignore  CMakeLists.txt  Makefile  explorer.cpp  explorer.hpp  localization_client.cpp  localization_client.hpp  localization_client.sh  localization_client_main.cpp  localization_server.cpp  localization_server.hpp  localization_server_main.cpp  localized_explorer.cpp  localized_explorer.hpp  localizer.cpp  localizer.hpp  localizer_env.cfg  pid_controller.cpp  pid_controller.hpp  run_explorer.cpp  status_client.cpp  status_client.hpp  status_client.sh  status_client_main.cpp  status_server.cpp  status_server.hpp  status_server_main.cpp  tag_test_tool.cpp  test_camera_latency.cpp  timestamp.cpp  timestamp.hpp  timestamp_test.cpp  util.cpp  util.hpp
darwin/Linux/project/dxl_monitor/: .gitignore  CMakeLists.txt
darwin/Linux/project/firmware_installer/: .gitignore
darwin/Linux/project/offset_tuner/: .gitignore  CMakeLists.txt
darwin/Linux/project/roboplus/: .gitignore
darwin/Linux/project/tutorial/action_script/: .gitignore
darwin/Linux/project/tutorial/ball_following/: .gitignore
darwin/Linux/project/tutorial/camera/: .gitignore
darwin/Linux/project/tutorial/color_filtering/: .gitignore
darwin/Linux/project/tutorial/fsr/: .gitignore
darwin/Linux/project/tutorial/head_tracking/: .gitignore  main.cpp
darwin/Linux/project/tutorial/zero_finding/: .gitignore  Makefile
darwin/Linux/project/walk_tuner/: .gitignore
darwin/doc/: Joint_Info_and_Constraints.html
darwin/doc/Joint_Info_and_Constraints_files/: -qBYX6U1m7-.js  3ANauH_pX-8.js  Count.cgi  c4O7oP1BgoZ.js  cMXiMYyvwpT.js  client.js  dynamictree_crunched.js  likebox.html  product_thumb.php  q6zy6lzv51S.js  szp4yOPn0TX.js  template_css(1).css  template_css.css  vxVpEUFZ2kr.js
darwin/openrave/: CMakeLists.txt  ForwardKinematicsDataGeneration.py  IK_fast_generation.py  IK_test.py  test.py
darwin/openrave/cpp/: .gitignore  CMakeLists.txt  ikfastloader.cpp
darwin/openrave/cpp/control_ee/: .gitignore  CMakeLists.txt  DarwinDynamicDefinitions.h  ForwardKinematics.h  Joystick.cpp  Joystick.h  JoystickDefinitions.h  Makefile  ik.cpp  ik_leftleg.cpp  main.cpp
darwin/openrave/cpp/forwardKin/: CMakeLists.txt  DarwinDynamicDefinitions.cpp  ForwardKinematics.cpp  ForwardKinematics.h  main.cpp
darwin/openrave/cpp/ik_loader/: .gitignore  README  makefile
darwin/openrave/cpp/ik_wrapper/: .gitignore  Makefile  README  main.cpp
gflags/: CMakeLists.txt
gflags/include/gflags/: gflags.h  gflags_completions.h  gflags_declare.h
gflags/src/: config.h
libconfig/: CMakeLists.txt
libconfig/include/: libconfig.h++
libconfig/src/: libconfigcpp.c++
ptpd/: CMakeLists.txt  Makefile
scripts/: activate.sh  add_new_user.sh  build.sh  cgrep  code_search.sh  darwin-reboot.sh  darwin-shutdown.sh  darwin-startup.sh  install-darwin-boot-scripts.sh  make_all_targets.sh  sudo_wrapper.sh  sudow
smawk/: CMakeLists.txt  Index.h  IndexedMatrix.h  SimpleMatrix.h  Smawk.h  SmawkDebug.h  test_furthest.cpp  test_index.cpp  test_smawk.cpp
testing/april_tag_test/: .gitignore  Makefile  explorer.cpp  explorer.hpp  main.cpp  run_explorer.cpp  tag_test_tool.cpp  util.cpp  util.hpp
